Add path mappings to jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
-    "extends": "./tsconfig.paths.json",
     "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@lift/providers": ["src/providers"],
+            "@lift/constructs": ["src/constructs"],
+            "@lift/constructs/*": ["src/constructs/*"]
+        },
         "declaration": true,
         "importHelpers": true,
         "module": "commonjs",
